--- a/develop-problem-C/PaperC - Chinese/sections/00_abstract_zh.tex
+++ b/develop-problem-C/PaperC - Chinese/sections/00_abstract_zh.tex
@@ -3,15 +3,15 @@
 
 \begin{abstract}
 
-《与星共舞》（DWTS）节目将评委评分与观众投票相结合来决定每周的淘汰结果，但个人观众投票份额从未被直接公开。我们开发了一个\textbf{双核反演引擎}，用于从美国全部34季的淘汰结果中重构潜在的观众投票分布。
+\textbf{受评委与观众之间反复出现的争议（如第27季）启发，我们将《与星共舞》（DWTS）视为一个“审计问题”：} 能否在\textbf{从未观测到个人观众投票份额}的情况下，通过节目公布的评分规则解释观测到的淘汰结果？
 
-对于\emph{百分比规则季}（第3-27季），我们将观众投票推断表述为带有松弛变量的\textbf{线性规划（LP）}问题，其中评委百分比计算公式为 $J_i / \sum_k J_k$（使用求和而非均值）。对于\emph{排名规则季}（第1-2季、第28-34季），观众投票排名被视为\textbf{潜在决策变量}，通过带有排列约束的\textbf{混合整数线性规划（MILP）}求解。两种求解器都在影响可行性的规则变更处进行了处理（豁免权、双淘汰）；对于评委拯救机制（第28季起），我们建模了\emph{垫底二人可行性}，但未建模现场拯救标准，将未记录的实施细节视为建模不确定性。
+为了回答这一问题，我们构建了一个\textbf{双核反演引擎}：(i) 通过\textbf{线性规划（LP）}重构百分比规则季（S3--S27）下的“可行观众投票区间”；(ii) 通过\textbf{混合整数线性规划（MILP）}推断排名规则季（S1--S2, S28--S34）下的“仅排名观众置换”。随后，我们利用最小松弛指标 $S^*$ 来量化\textbf{模型与数据的不匹配}，从而识别出无法通过任何可行投票分配来复现观测结果的情形。
 
-我们的框架识别出第32季和第33季存在\textbf{模型与数据不匹配}——约束松弛量 $S^* > 0$ 表明存在无法解释的结果。可能原因包括：未记录的规则变化、未建模的评委拯救标准或外部因素。
+在对全部34季的研究中，我们的反演引擎在1%的容差范围内解释了\textbf{32个赛季（松弛量为零）}；仅有\textbf{S32--S33}表现出结构性不匹配（在声明的规则下不存在可行解）。可能的原因包括未记录的规则变动、未建模的评委拯救机制或多支舞蹈聚合方式的差异。
 
-基于推断的投票数据，\textbf{Cox生存分析}揭示：（1）专业舞伴是主导性的生存预测因子（似然比检验 $\chi^2 = 47.3$，$p < 0.001$；Harrell's C指数提升 $\Delta C = 0.09$）；（2）评委评分主导早期回合，而观众支持势头推动后期阶段的结果。
+基于推断出的投票数据，\textbf{Cox生存分析}揭示：(1) 专业舞伴是主导性的生存预测因子（似然比检验 $\chi^2 = 47.3, p < 0.001$；Harrell's C指数提升 $\Delta C = 0.09$）；(2) 评委评分在早期轮次占主导，而观众投票势头则驱动后期结果。
 
-我们提出了一种\textbf{加权百分比}机制（$0.6 \times \text{评委百分比} + 0.4 \times \text{观众百分比}$），在基于区间的稳健分类下，将确定性错误淘汰数从40降至\textbf{3}。Jerry Rice（第2季）和Bobby Bones（第27季）的案例研究展示了关键争议。
+在机制设计方面，我们推荐的\textbf{加权百分比}方案（$0.6 \times \text{评委百分比} + 0.4 \times \text{观众百分比}$）在保持帕累托拐点附近观众影响力的同时，将\textbf{“确定性错误淘汰”}从40人减少到3人（降幅高达92.5%）。
 
 \begin{keywords}
 反问题；线性规划；混合整数规划；生存分析；机制设计
