--- a/develop-problem-C/PaperC - Chinese/sections/02_assumptions_zh.tex
+++ b/develop-problem-C/PaperC - Chinese/sections/02_assumptions_zh.tex
@@ -1,22 +1,16 @@
-% 第2节：假设
+% 第2节：模型假设
 
-\section{假设}
+\section{模型假设与合理性建议}
 \label{sec:assumptions}
 
-\begin{enumerate}[label=\textbf{H\arabic*.}, leftmargin=2em, itemsep=0.3em]
-    
-    \item \textbf{真诚投票。}观众为自己喜欢的选手投票，而非策略性投票。
-    
-    \item \textbf{真实淘汰。}公布的淘汰结果反映既定规则；偏差是可检测的模型-数据不匹配。
-    
-    \item \textbf{投票下限。}每位选手获得最低份额 $\epsilon > 0$（默认1\%）。
-    
-    \item \textbf{规则准确性。}记录在案的制作规则（豁免权、双淘汰、评委拯救）是正确的。
-    
-    \item \textbf{评委独立性。}评委在投票统计前进行评分。
-    
-    \item \textbf{时间独立性。}观众无法根据前几周的隐藏投票份额来调整投票行为。
-    
-    \item \textbf{模型-数据不匹配检测。}未建模的因素（如评委拯救的主观性、规则变化）表现为约束松弛量 $S^* > 0$。
+为了简化分析并捕捉问题的本质，我们基于对DWTS竞赛动态的观察，提出以下核心假设：
 
-\end{enumerate}
+\begin{itemize}
+    \item \textbf{诚实投票。} 观众为自己喜欢的选手投票，不存在因策略性考虑而投票给弱者以排除强敌的情况（符合娱乐节目的一般观察）。
+    \item \textbf{真实淘汰。} 公布的淘汰结果准确反映了即便是在最不利的可能观众分布下，该选手也无法晋级的事实（作为审计的基准前提）。
+    \item \textbf{投票下限。} 每位选手获得最低份额 $\epsilon = 0.001$ 的观众投票份额，以反映极少出现零票的情况。
+    \item \textbf{规则准确性。} 记录在案的制作规则（百分比 vs. 排名）在对应的赛季中是一致执行的。
+    \item \textbf{评委独立性。} 评委在投票统计前独立给出评分，不受实时观众投票率的影响。
+    \item \textbf{时间独立性。} 观众无法根据前几周的推断结果改变本周的投票偏好（即本模型暂不考虑跨周的内生反馈循环）。
+    \item \textbf{模型-数据不匹配检测。} 未建模的因素（如突发退赛、评委临时改变决策逻辑）将通过目标函数中的松弛项 $\mathbf{s}$ 自动识别。
+\end{itemize}
