--- a/develop-problem-C/PaperC - Chinese/sections/05_model2.tex
+++ b/develop-problem-C/PaperC - Chinese/sections/05_model2.tex
@@ -1,4 +1,4 @@
-% Section 5: Model 2 - Survival Analysis
+﻿% Section 5: Model 2 - Survival Analysis
 
 \section{Model 2: Survival Analysis}
 \label{sec:model2}
