--- a/develop-problem-C/PaperC - Chinese/sections/06_model3.tex
+++ b/develop-problem-C/PaperC - Chinese/sections/06_model3.tex
@@ -1,4 +1,4 @@
-% Section 6: Model 3 - Mechanism Design (Weighted Percent)
+﻿% Section 6: Model 3 - Mechanism Design (Weighted Percent)
 
 \section{Model 3: Mechanism Design}
 \label{sec:model3}
