--- a/develop-problem-C/PaperC - Chinese/sections/09_conclusion.tex
+++ b/develop-problem-C/PaperC - Chinese/sections/09_conclusion.tex
@@ -1,5 +1,5 @@
-% Section 9: Conclusions and Recommendations
-% 结论与建议
+﻿% Section 9: Conclusions and Recommendations
+% 缁撹涓庡缓璁?
 
 \section{Conclusions}
 \label{sec:conclusion}
