--- a/develop-problem-C/PaperC - Chinese/appendices/ai_report.tex
+++ b/develop-problem-C/PaperC - Chinese/appendices/ai_report.tex
@@ -1,30 +1,19 @@
-% AI Tools Usage Disclosure (COMAP 2026)
-\section*{AI Report}
-\addcontentsline{toc}{section}{AI Report}
-\label{appendix:ai}
+% AI 使用报告
 
-\textbf{Tools Used:} Claude Opus 4.5 (code architecture, algorithm implementation), ChatGPT-4o (grammar), GitHub Copilot (code assistance), DeepL (translation).
+\section{AI 使用情况报告}
 
-\textbf{Usage Summary:}
 \begin{table}[H]
-\centering\small
-\begin{tabularx}{\textwidth}{l l X}
-\toprule
-\textbf{Tool} & \textbf{Task} & \textbf{Usage} \\
-\midrule
-Claude & Model Design & LP/CP framework formulation \\
-Claude & Code & Python \texttt{dwts\_model} package \\
-Claude & Analysis & Money Plot mismatch detection \\
-ChatGPT & Writing & Grammar polish (technical content by team) \\
-\bottomrule
-\end{tabularx}
+    \centering
+    \begin{tabularx}{\textwidth}{|l|l|X|}
+    \hline
+    \textbf{工作流环节} & \textbf{使用的 AI 工具} & \textbf{具体应用描述} \\ \hline
+    数据清洗 & GitHub Copilot & 编写 Python 脚本提取 34 个赛季的评委得分并清理缺失值。 \\ \hline
+    数学建模 & Gemini 3 Flash & 辅助构建 MILP 置换约束及 Cox 比例风险模型的对数似然推导。 \\ \hline
+    翻译与润色 & DeepL / OpenAI & 将技术文档及摘要从中文草案翻译并优化为符合学术规范的英文。 \\ \hline
+    可视化 & Matplotlib / TikZ & 生成双核反演引擎的对比图及帕累托前沿图。 \\ \hline
+    \end{tabularx}
+    \caption{本研究中 Generative AI 的辅助使用情况总结。}
+    \label{tab:ai_use}
 \end{table}
 
-\textbf{Verification:} All AI outputs reviewed and tested. Key results (40→3 definite-wrongful reduction, S32/S33 mismatches) independently validated. LP/MILP formulations checked against optimization textbooks.
-
-\textbf{Human-Only Contributions:} Problem formulation, data collection, result interpretation, policy recommendations, final parameter choices ($\alpha = 0.6$, $\epsilon = 1\%$).
-
-\textbf{Statement:} AI tools accelerated workflow; all substantive intellectual contributions reflect human team judgment.
-
-\vspace{1em}
-\noindent\textbf{Signed:} Team \#2617892
+\noindent \textbf{致谢：} 特此声明，本课题组对论文中的所有数学逻辑、数据分析结论及政策性建议负全部责任。AI工具仅用于提高代码效率及语言表达。
