--- a/develop-problem-C/PaperC - Chinese/sections/03_notations.tex
+++ b/develop-problem-C/PaperC - Chinese/sections/03_notations.tex
@@ -1,5 +1,5 @@
-% Section 3: Notations
-% 符号说明表
+﻿% Section 3: Notations
+% 绗﹀彿璇存槑琛?
 
 \section{Notations}
 \label{sec:notations}
@@ -14,37 +14,37 @@ For clarity and consistency throughout this paper, we summarize the key symbols 
         \toprule
         \textbf{Symbol} & \textbf{Description} & \textbf{Unit/Range} \\
         \midrule
-        % 基本索引
+        % 鍩烘湰绱㈠紩
         $s$ & Season index & $s \in \{1, 2, \ldots, 34\}$ \\
         $w$ & Week (episode) index within a season & $w \in \{1, \ldots, W_s\}$ \\
         $i$ & Contestant index & -- \\
         $\mathcal{C}_{s,w}$ & Set of active contestants in season $s$, week $w$ & -- \\
         $n_{s,w}$ & Number of active contestants, $|\mathcal{C}_{s,w}|$ & -- \\
         \midrule
-        % 观测变量
+        % 瑙傛祴鍙橀噺
         $J_{i,w}$ & Judge score for contestant $i$ in week $w$ & [0, 40] \\
         $\bar{J}_w$ & Sum of judge scores in week $w$, $\bar{J}_w = \sum_i J_{i,w}$ & -- \\
         $E_w$ & Index of eliminated contestant in week $w$ & -- \\
         $r^{\mathrm{fan}}_{i,w}$ & Fan vote rank for contestant $i$ (\textbf{latent} for rank seasons) & $\{1, \ldots, n_{s,w}\}$ \\
         \midrule
-        % 潜在变量（推断目标）
+        % 娼滃湪鍙橀噺锛堟帹鏂洰鏍囷級
         $v_{i,w}$ & Fan vote share for contestant $i$ in week $w$ & $[0, 1]$, $\sum_i v_{i,w} = 1$ \\
         $\hat{v}_{i,w}$ & Inferred (point estimate) fan vote share & $[0, 1]$ \\
         $[v^{\min}_{i,w}, v^{\max}_{i,w}]$ & Feasible interval for $v_{i,w}$ via LP bounds & $[0, 1]$ \\
         \midrule
-        % 模型参数
+        % 妯″瀷鍙傛暟
         $\epsilon$ & Minimum vote share floor (sensitivity parameter) & $[0, 0.1]$ \\
         $S^*(\epsilon)$ & Slack variable at optimum for floor $\epsilon$ (mismatch metric) & $\geq 0$ \\
         $\alpha$ & Weight on judge score in hybrid mechanism & default 0.6 \\
         $\beta$ & Weight on fan vote in hybrid mechanism, $\beta = 1 - \alpha$ & default 0.4 \\
         \midrule
-        % 生存分析
+        % 鐢熷瓨鍒嗘瀽
         $T_i$ & Survival time (weeks survived) for contestant $i$ & weeks \\
         $\delta_i$ & Censoring indicator: 1 if eliminated, 0 if survived to finale & -- \\
         $\lambda(t \mid \mathbf{x}_i)$ & Hazard function for contestant $i$ at time $t$ & -- \\
         $\mathrm{HR}_k$ & Hazard ratio for covariate $k$ & -- \\
         \midrule
-        % 机制设计
+        % 鏈哄埗璁捐
         $J_i^{\%}$ & Judge percentage for contestant $i$, $J_i / \sum_k J_k$ & $[0, 1]$ \\
         $S_i^{\mathrm{wp}}$ & Weighted Percent score, $S_i = \alpha J_i^{\%} + (1-\alpha) V_i$ & $[0, 1]$ \\
         \bottomrule
