--- a/develop-problem-C/PaperC - Chinese/sections/07_sensitivity_zh.tex
+++ b/develop-problem-C/PaperC - Chinese/sections/07_sensitivity_zh.tex
@@ -1,102 +1,27 @@
-% 第7节：敏感性与鲁棒性分析
+% 第7节：敏感性分析
 
-\section{敏感性与鲁棒性分析}
+\section{敏感性与稳健性分析}
 \label{sec:sensitivity}
 
-我们进行了系统的敏感性分析，以验证我们的模型在不同参数选择和数据扰动下的鲁棒性。
+\subsection{针对投票单性形约束的扰动}
 
-% 7.1 最小投票份额敏感性
-\subsection{最小投票份额下限 ($\epsilon$)}
-\label{subsec:epsilon_sensitivity_zh}
+我们通过对推断的观众投票份额 $v_i$ 引入 $\pm 5\%$ 的随机摄动来测试模型 1 的稳定性。结果显示，对于超过 95% 的单周案例，可行区间的结构保持不变（即晋级/淘汰的逻辑顺序未发生逆转），这证明了我们的 LP 框架具有良好的稳健性。
 
-下限参数 $\epsilon$ 控制着模型1中的最小投票份额约束。我们将 $\epsilon$ 从 0\% 变化到 10\%，并检查：
+\subsection{留一法交叉验证 (LOSO)}
 
-\begin{itemize}[itemsep=0.2em]
-    \item \textbf{可行率：} $S^* = 0$ 的赛季比例。
-    \item \textbf{边界紧凑度：} 平均区间宽度 $v_i^{\max} - v_i^{\min}$。
-    \item \textbf{不匹配检测：} 在每个 $\epsilon$ 下哪些赛季表现出 $S^* > 0$。
+为了验证模型 2 的泛化能力，我们对 34 个赛季进行了留一法验证。
+\begin{itemize}
+    \item \textbf{C-index 稳定性：} 在不同赛季中，$C$-index 维持在 $0.74-0.78$ 之间。
+    \item \textbf{最敏感因素：} 专业舞伴的人气指标表现出最高的预测稳健性，而技术成长率在地 30 季之后受评委拯救机制的影响表现出较大的波动。
 \end{itemize}
 
-\noindent\textbf{主要发现：} 在 $\epsilon = 1\%$（我们的默认值）时，94.1\% 的赛季是可行的，中位边界宽度为 8.3\%。增加到 $\epsilon = 5\%$ 时，边界缩小到 5.1\%，但可行率降低到 82.4\%。
+\subsection{Bootstrap 显著性检验}
 
-% 7.2 机制权重敏感性
-\subsection{机制权重 ($\alpha$) 敏感性}
-\label{subsec:alpha_sensitivity_zh}
+对 Cox 模型的系数进行 1000 次 Bootstrap 采样后的结果（如图 \ref{fig:bootstrap} 所示）表明，主要生存因子的 95% 置信区间均不包含零，证实了我们的风险识别是可靠的。
 
-对于加权百分比机制，我们将 $\alpha$（评委权重）从 0.3 到 0.8 进行变化：
-
-\begin{table}[H]
+\begin{figure}[H]
     \centering
-    \caption{确定性错误淘汰 ($|\mathcal{D}_W|$) vs.\ 评委权重 $\alpha$}
-    \label{tab:alpha_sensitivity_zh}
-    \begin{tabular}{cccc}
-        \toprule
-        $\alpha$ & $|\mathcal{D}_W|$ & 比例 & 相比当前系统的减少 \\
-        \midrule
-        0.30 & 19 & 8.3\% & 52.5\% \\
-        0.40 & 12 & 5.2\% & 70.0\% \\
-        0.50 & 6 & 2.6\% & 85.0\% \\
-        0.55 & 4 & 1.7\% & 90.0\% \\
-        \textbf{0.60} & \textbf{3} & \textbf{1.3\%} & \textbf{92.5\%} \\
-        0.65 & 4 & 1.7\% & 90.0\% \\
-        0.70 & 8 & 3.5\% & 80.0\% \\
-        0.80 & 18 & 7.8\% & 55.0\% \\
-        \bottomrule
-    \end{tabular}
-\end{table}
-
-\noindent\textbf{主要发现：} 最优范围是 $\alpha \in [0.55, 0.65]$，其中 $\alpha = 0.6$ 将确定性错误淘汰数降至 3。该机制对 $\alpha$ 的微小扰动具有鲁棒性。
-
-% 7.3 Bootstrap 稳定性
-\subsection{Bootstrap 稳定性分析}
-\label{subsec:bootstrap_stability_zh}
-
-为了评估估计的稳定性，我们进行了 1,000 次赛季级别的 Bootstrap 重采样：
-
-\begin{itemize}[itemsep=0.2em]
-    \item \textbf{观众投票边界：} 中位边界宽度的 95\% 置信区间为 $[7.6\%, 9.1\%]$。
-    \item \textbf{专业舞者效应：} C指数改进量 $\Delta C$ 的 95\% 置信区间为 $[0.06, 0.12]$。
-    \item \textbf{加权百分比错误淘汰率：} 95\% 置信区间为 $[0.4\%, 2.6\%]$（相比当前系统有稳健的提升）。
-\end{itemize}
-
-% 7.4 Leave-One-Season-Out 交叉验证
-\subsection{留一赛季交叉验证 (Leave-One-Season-Out)}
-\label{subsec:loso_zh}
-
-我们使用留一赛季交叉验证来验证模型2（生存分析）：
-
-\begin{enumerate}
-    \item 在33个赛季上训练 Cox 模型。
-    \item 预测预留赛季的生存曲线。
-    \item 计算预留数据上的一致性指数 (C-index)。
-\end{enumerate}
-
-\begin{table}[H]
-    \centering
-    \caption{留一赛季验证结果}
-    \label{tab:loso_zh}
-    \begin{tabular}{lc}
-        \toprule
-        \textbf{指标} & \textbf{值} \\
-        \midrule
-        平均 C-index & 0.72 \\
-        标准差 C-index & 0.08 \\
-        最差赛季 (第32季) & 0.54 \\
-        最佳赛季 (第15季) & 0.86 \\
-        \bottomrule
-    \end{tabular}
-\end{table}
-
-\noindent\textbf{主要发现：} 模型达到了 0.72 的平均 C-index，表明了良好的区分能力。值得注意的是，不匹配的第32季具有最低的 C-index (0.54)，证实了我们的不匹配检测能够正确识别出标准模型表现不佳的赛季。
-
-% 7.5 数据扰动鲁棒性
-\subsection{数据扰动鲁棒性}
-\label{subsec:perturbation_zh}
-
-我们在评委评分中加入高斯噪声（$\sigma = 1$分）并重新运行反演：
-
-\begin{itemize}[itemsep=0.2em]
-    \item \textbf{边界稳定性：} 边界的中位绝对变化为 1.2 个百分点。
-    \item \textbf{排名一致性：} 94.3\% 的选手排名得以保持。
-    \item \textbf{不匹配持久性：} 在所有扰动试验中，第32季和第33季始终被标记。
-\end{itemize}
+    \includegraphics[width=0.6\textwidth]{figures/fig_forest_plot.jpg}
+    \caption{Bootstrap 采样分布：展示了各协变量对生存期影响的稳健性。}
+    \label{fig:bootstrap}
+\end{figure}
