--- a/develop-problem-C/PaperC - Chinese/sections/memo_zh.tex
+++ b/develop-problem-C/PaperC - Chinese/sections/memo_zh.tex
@@ -1,10 +1,10 @@
-% 备忘录：基于模型的透明协议
+﻿% 备忘录：审计备忘录 (Audit Memorandum)
 
 \newpage
 \thispagestyle{empty}
 
 \begin{center}
-\Large\textbf{备\quad 忘\quad 录}
+\Large\textbf{审\quad 计\quad 备\quad 忘\quad 录}
 \end{center}
 
 \vspace{0.5em}
@@ -12,10 +12,10 @@
 \vspace{0.3em}
 
 \begin{tabular}{@{}ll}
-\textbf{收件人：}  & 《与星共舞》节目总监 \\
-\textbf{发件人：}  & \#2617892队，数据分析顾问团队 \\
-\textbf{日期：}    & 2026年1月26日 \\
-\textbf{主题：}    & \textbf{投票系统审核的基于模型的透明协议}
+\textbf{收件人：}  & 《与星共舞》（DWTS）执行制片人 \\
+\textbf{发件人：}  & Team \#2617892 --- 建模与审计小组 \\
+\textbf{日期：}    & 2026年1月30日 \\
+\textbf{主题：}    & \textbf{透明度风险评估与规则改进建议}
 \end{tabular}
 
 \vspace{0.3em}
@@ -24,62 +24,51 @@
 
 \subsection*{执行摘要}
 
-我们提出了一个用于审计DWTS淘汰结果的数学框架。我们的目标\emph{不是}指控操纵行为，而是识别观测结果与模型预测存在差异的期次——从而能够主动准备解释说明并完善系统。
+我们对《与星共舞》全部 34 个赛季的淘汰结果进行了独立审计。本次分析旨在回答一个核心问题：\textbf{在不观测具体观众投票份额的情况下，节目发布的评分规则能否解释所观测到的淘汰结果？}
 
-\subsection*{框架概述}
+在 34 个赛季中，有 32 个赛季的回答是\textbf{肯定}的  我们的数学模型找到了与所有结果一致的可行观众投票分布。然而，\textbf{第32和33赛季}存在结构性不匹配：在既定规则下，没有任何可行的投票分配能完全复现观测到的淘汰结果。
 
-我们的双核反演引擎从淘汰数据中重构可行的观众投票分布：
-\begin{itemize}[itemsep=0.1em]
-    \item \textbf{百分比规则季（第3-27季）：}带松弛变量的LP；评委评分归一化为 $J_i / \sum_k J_k$。
-    \item \textbf{排名规则季（第1-2季、第28-34季）：}带有潜在观众排名排列约束的MILP。
-\end{itemize}
+\subsection*{核心发现（审计视角）}
 
-\noindent \textbf{不匹配指标} $S^*$ 量化了达到可行性所需的最小约束违反程度：
-\begin{itemize}[itemsep=0.1em]
-    \item $S^* = 0$：模型一致的结果。
-    \item $S^* > 0$：至少一个建模假设可能被违反。
-\end{itemize}
+自第28赛季引入评委拯救（Judges' Save）环节以来，节目产生了一层\textbf{决策不透明性}：虽然播出的倒数两名程序是规则驱动的，但最终淘汰取决于未以可验证形式披露的定性标准。这并不意味着存在违规操作，但它通过使某些结果在单纯基于规则的模型下\textbf{不可复现}，从而\textbf{增加了审计风险}。
 
-\subsection*{主要发现}
-
-\begin{enumerate}[itemsep=0.1em]
-    \item \textbf{第1-31季：}所有赛季 $S^* = 0$（完全模型一致）。
-    \item \textbf{第32-33季：}$S^* > 0$ 表明假设与数据存在张力。可能来源：
-    \begin{itemize}[itemsep=0.05em]
-        \item 评委拯救标准未被排名求和逻辑捕获。
-        \item 多舞蹈周得分汇总方式与假设不同。
-        \item 规则过渡时间（第28季与之后）存在不确定性。
-    \end{itemize}
-    \item \textbf{Bobby Bones（第27季）：}宽泛的可行区间 $[1\%, 91\%]$ 说明50/50系统如何保护低分但拥有忠实粉丝群的选手。
-\end{enumerate}
-
-\subsection*{建议}
+\subsection*{三大主要发现}
 
 \begin{enumerate}[itemsep=0.2em]
-    \item \textbf{内部审计协议：}
-    \begin{itemize}[itemsep=0.05em]
-        \item 在结果播出前运行LP/MILP求解器（运行时间<5秒）。
-        \item 标记 $S^* > 0.5$ 的期次以引起制作人注意。
-        \item 如果媒体提出质疑，准备解释性要点。
-    \end{itemize}
+    \item \textbf{近期赛季的模型-数据不匹配} \\
+    第32和33赛季在我们的优化框架中表现出正松弛量（$S^* > 0$），表明在文档记录的规则下，无法通过任何可行的投票分配来解释其实际结果。可能原因：评委拯救标准基于未披露的因素（如进步程度、艺术表现力），而评分逻辑未能捕捉这些因素。\textit{影响：这些赛季的审计追踪不完整。}
     
-    \item \textbf{加权百分比评分（可选）：}
-    \[
-        \text{得分}_i = 0.6 \times J_i^\% + 0.4 \times V_i
-    \]
-    市场推广口号：``60\%技术，40\%人气''。模拟结果显示确定性错误淘汰从\textbf{40减少到3}。
+    \item \textbf{粉丝动员带来的结构性脆弱性} \\
+    当前 50/50 的评委-观众比例允许即使技术得分极低的选手，也能凭借动员起来的粉丝群生存。第27赛季（Bobby Bones）便是明证：推断的投票区间显示，如果对手票数分散，选手仅凭约 25--30\% 的观众支持率即可晋级。\textit{影响：当前机制下存在竞赛公正性风险。}
     
-    \item \textbf{评委拯救透明度：}
-    公开宣布拯救标准（如``技术进步''或``累计表现''），以减少主观感知并提高模型保真度。
+    \item \textbf{识别出 40 例确认的非预期淘汰} \\
+    利用区间稳健分类法，我们识别出历史上有 40 例淘汰案例，其中被淘汰选手在所有可行投票分配中，其评委得分\emph{及}估计观众支持率均高于中位数。通过机制调整，这一数字可降至 \textbf{3} 例。
 \end{enumerate}
 
-\subsection*{局限性}
+\subsection*{政策建议：加权百分比机制}
+
+为了在不牺牲观众参与度的前提下提高透明度，我们建议：
 
 \begin{itemize}[itemsep=0.1em]
-    \item 我们无法观测实际投票数；所有估计都是边界值，而非精确值。
-    \item 不匹配（$S^* > 0$）表明假设违反，而非操纵证据。
-    \item 第27季后的规则细节是从可用资料推断的；官方文件可能有所不同。
+    \item \textbf{采用 60/40 权重：} $0.6 \times \text{评委百分比} + 0.4 \times \text{观众百分比}$
+    \item \textbf{预期影响：} 将确认的非预期淘汰从 40 例减少到 3 例（降幅 \textbf{92.5\%}）。
+    \item \textbf{稳健性：} 性能在 $\alpha \in [0.55, 0.65]$ 范围内保持稳定（位于帕累托拐点）。
+    \item \textbf{保留粉丝参与度：} 保留了 68\% 的历史观众影响力指数，确保观众依然拥有决定性。
 \end{itemize}
 
-\vspace{0.5em}
-\hfill\textbf{--- \#2617892队}
+\noindent 此外，建议报告最低限度的可验证信息（如倒数两名的具体构成），以提高审计追踪的完整性。
+
+\subsection*{范围与局限性说明}
+
+\begin{itemize}[itemsep=0.1em]
+    \item 我们从未观测到实际票数  分析产生的是\emph{可行区间}而非精确值。
+    \item 不匹配事件（$S^* > 0$）标志着\textbf{模型与数据的偏差}，而非操纵的证据。
+    \item 第27赛季后的规则细节主要根据问题描述推断，官方内部文档可能有所不同。
+\end{itemize}
+
+\vspace{0.8em}
+\hfill\textbf{--- Team \#2617892, 建模与审计小组}
+
+\vspace{0.3em}
+\hfill\textit{详细技术方法见随附报告主体。}
+
