--- a/develop-problem-C/outputs/mc_summary_statistics.tex
+++ b/develop-problem-C/outputs/mc_summary_statistics.tex
@@ -5,11 +5,12 @@
 \toprule
 Category & N & Mean P(W) & Median P(W) & Std P(W) & Mean CI Width \\
 \midrule
-Overall & 298 & 0.687 & 0.697 & 0.144 & 0.024 \\
-Method: rank & 75 & 0.731 & 0.748 & 0.173 & 0.022 \\
-Method: percent & 223 & 0.672 & 0.689 & 0.130 & 0.025 \\
-Class: Uncertain & 288 & 0.676 & 0.691 & 0.135 & 0.025 \\
-Class: Definite-Wrongful & 10 & 0.981 & 0.984 & 0.017 & 0.007 \\
+Overall & 298 & 0.691 & 0.713 & 0.193 & 0.022 \\
+Method: rank & 75 & 0.749 & 0.884 & 0.306 & 0.013 \\
+Method: percent & 223 & 0.671 & 0.687 & 0.130 & 0.025 \\
+Class: Uncertain & 264 & 0.674 & 0.696 & 0.145 & 0.025 \\
+Class: Definite-Wrongful & 28 & 0.995 & 1.000 & 0.010 & 0.002 \\
+Class: Definite-Correct & 6 & 0.000 & 0.000 & 0.000 & 0.001 \\
 \bottomrule
 \end{tabular}
 \end{table}
